# multiroute-python

./: AGENTS.md  LICENSE  README.md  completions.txt  main.py  pyproject.toml  test_litellm_model.py
.github/workflows/: publish.yml  test.yml
examples/: anthropic_tools_usage.py  anthropic_usage.py  basic_failover.py  google_tools_usage.py  google_usage.py  litellm_usage.py  openai_responses_usage.py  openai_tools_usage.py  openai_usage.py  pydantic_ai_usage.py
src/multiroute/: __init__.py  config.py  models.py  models.yaml  providers.py  providers.yaml
src/multiroute/anthropic/: __init__.py  client.py
src/multiroute/google/: __init__.py  client.py
src/multiroute/litellm/: __init__.py  client.py
src/multiroute/openai/: __init__.py  client.py
src/multiroute/providers/: __init__.py  anthropic.py  google_genai.py  openai.py
src/multiroute/pydantic_ai/: __init__.py  client.py
tests/: test_anthropic_failover.py  test_examples.py  test_google_genai_failover.py  test_models.py  test_openai_failover.py
tests/providers/: test_anthropic.py  test_google.py  test_litellm.py  test_openai.py  test_pydantic_ai.py
