[project]
name = "multiroute"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.84.0",
    "google-genai>=0.1.0",
    "openai>=2.26.0",
]

[tool.uv]
dev-dependencies = [
    "multiroute",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
multiroute = { workspace = true }

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
asyncio_mode = "auto"
