[project]
name = "multiroute"
version = "0.1.5"
description = "Official multiroute.ai SDK client with client-side failover for OpenAI, Anthropic, Google and other LLMs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.26.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
anthropic = [
    "anthropic>=0.84.0",
]
google = [
    "google-genai>=0.1.0",
]
litellm = [
    "litellm>=1.40.0",
]
all = [
    "anthropic>=0.84.0",
    "google-genai>=0.1.0",
    "litellm>=1.40.0",
]

[dependency-groups]
dev = [
    "multiroute[all]",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
    "build>=1.4.0",
    "twine>=6.2.0",
]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
multiroute = { workspace = true }

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
asyncio_mode = "auto"
