[project]
name = "multiroute"
version = "0.1.7"
description = "Official multiroute.ai SDK client with client-side failover for OpenAI, Anthropic, Google and other LLMs."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai>=2.26.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
anthropic = [
    "anthropic>=0.84.0",
]
google = [
    "google-genai>=0.1.0",
]
litellm = [
    "litellm>=1.40.0",
]
all = [
    "anthropic>=0.84.0",
    "google-genai>=0.1.0",
    "litellm>=1.40.0",
]

[dependency-groups]
dev = [
    "multiroute[all]",
    "httpx>=0.28.1",
    "respx>=0.22.0",
    "build>=1.4.0",
    "twine>=6.2.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.15.6",
    "pydantic-ai>=0.8.1",
    "pydantic-settings>=2.0.0",
]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
multiroute = { workspace = true }

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
asyncio_mode = "auto"

[tool.ruff]
extend-exclude = ["alembic"]
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",
    "D107",
    "E501",
    "INP001",
    "EM101",
    "TRY003",
    "S105",
    "S106",
    "TRY300",
    "TRY301",
    "G004",
    "EM102",
    "TC003",
]

fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
    "ARG",
    "FBT",
    "PLR2004",
    "S311",
    "ANN201",
    "ANN202",
    "ANN204",
    "ANN401",
    "T201",
    "D103",
    "SLF001"
]
